erDiagram
    USERS {
        ObjectId _id PK
        string username
        string email
        string password
        string status
        Date create_at
        Date update_at
        string avatar
        Date date_of_birth
        string phone_number
        string gender
        ObjectId wallet FK
    }
    
    WALLETS {
        ObjectId _id PK
        number balance_credit
        array history_transactions
        Date update_at
    }
    
    REFRESH_TOKENS {
        ObjectId _id PK
        string token
        Date created_at
        ObjectId user_id FK
        Date expires_at
    }
    
    OTP_VERIFY_EMAIL {
        ObjectId _id PK
        string email
        string type
        string otp
        Date expires_at
    }
    
    ADMIN {
        ObjectId _id PK
        string username
        string email
        string password
        string role
        string avatar
        Date create_at
        Date update_at
    }
    
    LEVELS {
        ObjectId _id PK
        string title
        string description
        string fa_class_icon
        number pos
        string slug
    }
    
    TOPICS {
        ObjectId _id PK
        string title
        string description
        string fa_class_icon
        number pos
        string slug
    }
    
    TYPES {
        ObjectId _id PK
        string title
        string description
        string fa_class_icon
        number pos
        string slug
    }
    
    WS_LISTS {
        ObjectId _id PK
        string title
        ObjectId topic FK
        ObjectId level FK
        boolean isActive
        array list
        number pos
        string slug
        Date create_at
        Date update_at
    }
    
    WP_PARAGRAPHS {
        ObjectId _id PK
        string title
        ObjectId topic FK
        ObjectId level FK
        ObjectId type FK
        string content
        array hint
        string slug
        number pos
        boolean isActive
        Date create_at
        Date update_at
    }
    
    SS_LISTS {
        ObjectId _id PK
        string title
        ObjectId topic FK
        ObjectId level FK
        array list
        number pos
        string slug
        boolean isActive
        Date create_at
        Date update_at
    }
    
    SV_SHADOWINGS {
        ObjectId _id PK
        string title
        ObjectId topic FK
        ObjectId level FK
        string videoUrl
        string thumbnailUrl
        array transcript
        number pos
        string slug
        boolean isActive
        Date create_at
        Date update_at
    }
    
    LV_VIDEOS {
        ObjectId _id PK
        string title
        string description
        number time
        array topics FK
        ObjectId level FK
        string videoUrl
        string thumbnailUrl
        array transcript
        array questions
        number pos
        string slug
        boolean isActive
        Date create_at
        Date update_at
    }
    
    USER_SCORES {
        ObjectId _id PK
        ObjectId userId FK
        number year
        number month
        number day
        array scores
        Date create_at
        Date update_at
    }
    
    HIS_PRACTICE_USERS {
        ObjectId _id PK
        ObjectId userId FK
        string type
        object content
        Date create_at
        Date update_at
    }
    
    %% Note: HIS_WS_USERS, HIS_WP_USERS, HIS_SV_USERS, HIS_LV_USERS 
    %% are embedded documents in HIS_PRACTICE_USERS.content field
    %% They are not separate collections
    
    HIS_SS_USERS {
        ObjectId _id PK
        ObjectId userId FK
        ObjectId ssListId FK
        string status
        array sentences
        Date create_at
        Date update_at
    }
    
    PROMPTS {
        ObjectId _id PK
        string title
        string description
        string feature
        string feature_type
        string content
        array replace_variables
        boolean status
        Date create_at
        Date update_at
    }
    
    SYSTEM_CONFIGS {
        ObjectId _id PK
        string type
        object config
    }
    
    WS_LIST_PREVIEWS {
        ObjectId _id PK
        string title
        ObjectId topic FK
        ObjectId level FK
        boolean isActive
        array list
        number pos
        string slug
        Date create_at
        Date update_at
    }
    
    WP_PREVIEWS {
        ObjectId _id PK
        string title
        ObjectId topic FK
        ObjectId level FK
        ObjectId type FK
        string content
        array hint
        string slug
        number pos
        boolean isActive
        Date create_at
        Date update_at
    }

    %% Relationships
    USERS ||--o| WALLETS : "has"
    USERS ||--o{ REFRESH_TOKENS : "has"
    USERS ||--o{ USER_SCORES : "has"
    USERS ||--o{ HIS_PRACTICE_USERS : "has"
    USERS ||--o{ HIS_SS_USERS : "has"
    
    LEVELS ||--o{ WS_LISTS : "belongs_to"
    LEVELS ||--o{ WP_PARAGRAPHS : "belongs_to"
    LEVELS ||--o{ SS_LISTS : "belongs_to"
    LEVELS ||--o{ SV_SHADOWINGS : "belongs_to"
    LEVELS ||--o{ LV_VIDEOS : "belongs_to"
    LEVELS ||--o{ WS_LIST_PREVIEWS : "belongs_to"
    LEVELS ||--o{ WP_PREVIEWS : "belongs_to"
    
    TOPICS ||--o{ WS_LISTS : "belongs_to"
    TOPICS ||--o{ WP_PARAGRAPHS : "belongs_to"
    TOPICS ||--o{ SS_LISTS : "belongs_to"
    TOPICS ||--o{ SV_SHADOWINGS : "belongs_to"
    TOPICS ||--o{ LV_VIDEOS : "belongs_to"
    TOPICS ||--o{ WS_LIST_PREVIEWS : "belongs_to"
    TOPICS ||--o{ WP_PREVIEWS : "belongs_to"
    
    TYPES ||--o{ WP_PARAGRAPHS : "belongs_to"
    TYPES ||--o{ WP_PREVIEWS : "belongs_to"
    
    WS_LISTS ||--o{ HIS_PRACTICE_USERS : "has_history"
    WP_PARAGRAPHS ||--o{ HIS_PRACTICE_USERS : "has_history"
    SS_LISTS ||--o{ HIS_SS_USERS : "has_history"
    SS_LISTS ||--o{ HIS_PRACTICE_USERS : "has_history"
    SV_SHADOWINGS ||--o{ HIS_PRACTICE_USERS : "has_history"
    LV_VIDEOS ||--o{ HIS_PRACTICE_USERS : "has_history"

